--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jump</title>
+    <title>Mario_Jump</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="gamer-board">
-        <p>Contagem de Pulos: <span id="contador"></span></p>
+        <p>Contagem de Pulos: <span id="contador"></span></p> <button id="restartButton">Reiniciar game</button>
     <img src="assets/clouds.png" class="clouds">
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <img src="assets/mario.gif" class="mario">
